--- a/src/elements/Button/styles.module.scss
+++ b/src/elements/Button/styles.module.scss
@@ -1,7 +1,3 @@
 .button {
-  @apply bg-black w-[59px] h-[59px] rounded-r-[18px] flex justify-center items-center;
-
-  &:hover {
-    @apply opacity-80;
-  }
+  @apply bg-black w-[59px] h-[59px] rounded-r-[15px] flex justify-center items-center hover:opacity-80;
 }
