--- a/src/assets/styles/utils/reset.scss
+++ b/src/assets/styles/utils/reset.scss
@@ -34,7 +34,7 @@ nav,footer,header,aside {display: block;}
 html,body {
 	height: 100%;
 	width: 100%;
-	font-size: 62.5%;
+	font-size: 10px;
 	line-height: 1;
 	font-family: 'Rubik', sans-serif;
 	-ms-text-size-adjust: 100%;
