--- a/src/elements/InputText/styles.module.scss
+++ b/src/elements/InputText/styles.module.scss
@@ -3,5 +3,5 @@
 }
 
 .input_text{
-  @apply w-[498px] h-[59px] rounded-l-[15px] border border-black border-solid text-[1.8rem] pl-[1.4em] text-dark-gray font-normal;
+  @apply w-[498px] h-[59px] rounded-l-[15px] border border-black border-solid text-[1.8rem] pl-[1.4em] font-normal hover:cursor-pointer;
 }
