--- a/src/assets/styles/utils/reset.scss
+++ b/src/assets/styles/utils/reset.scss
@@ -31,7 +31,7 @@ a:focus,a:active {outline: none;}
 
 nav,footer,header,aside {display: block;}
 
-html,body {
+html,body, #app {
 	height: 100%;
 	width: 100%;
 	font-size: 10px;
