--- a/src/elements/InputText/styles.module.scss
+++ b/src/elements/InputText/styles.module.scss
@@ -5,3 +5,9 @@
 .input_text{
   @apply w-[498px] h-[59px] rounded-l-[15px] border border-black border-solid text-[1.8rem] pl-[1.4em] font-normal hover:cursor-pointer;
 }
+
+@media only screen and (max-width: 757px) {
+  .input_text_wrapper{
+    @apply w-[35%] min-w-[26.4rem];
+  }
+}
