--- a/src/modules/HeaderSearch/styles.module.scss
+++ b/src/modules/HeaderSearch/styles.module.scss
@@ -10,3 +10,19 @@
 .input_wrapper {
   @apply flex;
 }
+
+@media only screen and (max-width: 757px){
+  .input_wrapper {
+    @apply w-full justify-center;
+  }
+}
+
+@media only screen and (max-width: 375px){
+  .header_search {
+    @apply flex-col bg-[url(images/pattern-bg-mobile.png)];
+  }
+
+  .input_wrapper {
+    @apply min-w-[326px];
+  }
+}
