--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import './assets/styles/utils/reset.scss';
+
+@layer base {
+  @font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(/fonts/Rubik-VariableFont_wght.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(/fonts/Rubik-VariableFont_wght.ttf) format("truetype");
+  }
+
+  @font-face {
+    font-family: "Rubik";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(/fonts/Rubik-VariableFont_wght.ttf) format("truetype");
+  }
+
+  html,
+  body,
+  #app {
+    height: 100%;
+    width: 100%;
+    font-family: "Rubik", sans-serif;
+  }
+}
