--- a/src/elements/Button/styles.module.scss
+++ b/src/elements/Button/styles.module.scss
@@ -1,3 +1,3 @@
 .button {
-  @apply bg-black w-[59px] h-[59px] rounded-r-[15px] flex justify-center items-center hover:opacity-75;
+  @apply flex h-[59px] w-[59px] items-center justify-center rounded-r-[15px] bg-black hover:opacity-75;
 }
