--- a/src/elements/Spinner/styles.module.scss
+++ b/src/elements/Spinner/styles.module.scss
@@ -7,27 +7,35 @@
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .small {
-  @apply w-32 h-32;
+  @apply h-32 w-32;
 }
 
 .medium {
-  @apply w-40 h-40;
+  @apply h-40 w-40;
 }
 
 .large {
-  @apply w-48 h-48;
+  @apply h-48 w-48;
 }
 
 .page {
-  @apply w-[13.5rem] h-[13.5rem];
+  @apply h-[13.5rem] w-[13.5rem];
 }
